  ##################################
##### Changed in Scannomatic 0.99 #####
   ##################################

*** Manual hardcoded xml production to reduce memory foot print.

*** In xml <cells> and <cell> where changed to <grid-cells> and
    <grid-cell>. <grid-cells>, <plates>, <scans> can only hold
    <grid-cell>, <plate>, <scan> respectively.

  ##################################
##### Changed in Scannomatic 0.98 #####
   ##################################

*** Analysis is now done in grayscale-values and not pixel values

*** Inserted <time></time> in xml per scan

  ##################################
##### Changed in Scannomatic 0.97 #####
   ##################################

*** Fixed some more bugs in analysis

*** Bugs were fixed with grid array analysis.

*** Signal from grid array analysis is now processed using
    the frequency to account for missed spikes and false
    positives.

*** Recouperated the fixture settings so they work again

*** Inserted a cutoff for how much the grid may change from time
    to time, if more - it uses previous settings

  ##################################
##### Changed in Scannomatic 0.96 #####
   ##################################

*** Analysis modules were implemented for detecting the grid of
    cells given a plate-rectangle.

*** Entire project analysis was added, but not yet with a GUI

*** Log file maker can now be run post scanning is complete and
    will produce the same inforamtion about the images as
    normal on the fly-logging. The first post with info on the
    experiment cannot be created though.

*** Included IQR mean as a measurement

  ##################################
##### Changed in Scannomatic 0.95 #####
   ##################################

*** Analyse One GUI now with interactive selection showing the
    analysis of said selections with graphs and all.

*** Fixture GUI refurnish started with interactive selection of
    areas.
